[♻️ REFACTOR] 사장님 API 관련 Dto 변경